--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer base {
+    li {
+        @apply p-2;
+    }
+    .ul1 {
+        @apply md:flex items-center absolute md:static bg-[bisque] md:z-auto z-[-1] left-0 w-full md:w-auto md:pl-0 pl-2 transition-all;
+    }
+    .ul2 {
+        @apply absolute md:static bg-[bisque] md:z-auto  left-0 w-full md:w-auto md:pl-0 pl-2 my-4;
+    }
 }
